app/javascript/components/Tracks/Track/Header/styles.module.scss
@import 'styles/breakpoints';

.container {
  border-bottom: solid 1px var(--border-color);

  background-color: var(--white);
}

.content {
  display: grid;
  grid-gap: 1rem;
  padding: 1rem 0 0;

  @include lg-screen {
    width: 1200px;
    margin: 0 auto;
  }
}

.row {
  display: grid;
  grid-gap: 1rem;
  grid-template-columns: min-content min-content min-content 1fr;
  align-items: baseline;
}

.editLink {
  display: flex;
  align-items: center;
  margin-left: auto;

  text-decoration: none;

  svg {
    height: 0.875em;
    margin-right: 0.25rem;

    path {
      fill: var(--grey-60);
    }
  }

  span {
    color: var(--grey-70);
    font-size: 1rem;
  }
}

.profile {
  display: flex;

  white-space: nowrap;

  img {
    width: 2rem;
    height: 2rem;
    margin-right: 0.5rem;
    border-radius: 50%;
  }
}

.pilot {
  font-size: 1.5rem;
  line-height: 2rem;
}

.place {
  white-space: nowrap;

  svg {
    height: 0.75em;
    margin-right: 0.25em;

    path {
      fill: var(--grey-60);
    }
  }
}

.suit {
  white-space: nowrap;

  svg {
    height: 0.75em;
    margin-right: 0.25em;

    path {
      fill: var(--grey-60);
    }
  }
}

.trackId {
  margin-left: auto;

  color: var(--grey-60);
  font-weight: 500;
  font-size: 1.5rem;
}

